smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/newlines-are-not-required.smithy
namespace smithy.example string MyString @deprecated structure Foo {}
