smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/conflicting-trait-def.smithy
// trait name `deprecated` conflicts with imported shape `smithy.api#deprecated`
use trait smithy.api#deprecated

namespace smithy.example

trait deprecated {}
